[Ryuutama]: spacing fixes

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -510,25 +510,25 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
 }
 
 .sheet-rolltemplate-spellContainer {
-border: 1px solid gray;
+    border: 1px solid gray;
 }
 
 .sheet-rolltemplate-spellCard {
-display: flex;
-flex-flow: row wrap;
-justify-content: space-between;
-background-color: #d0d2e4;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    background-color: #d0d2e4;
 }
 
 .sheet-rolltemplate-spellTitle,
 .sheet-rolltemplate-spellAttrText{
-background-color: #45619e;
-font-family: Helvetica, Arial;
-font-weight: bold;
-font-size: 12px;
-justify-content: center;
-color: white;
-padding: 1px 3px;
+    background-color: #45619e;
+    font-family: Helvetica, Arial;
+    font-weight: bold;
+    font-size: 12px;
+    justify-content: center;
+    color: white;
+    padding: 1px 3px;
 }
 
 .sheet-rolltemplate-spellAttr {
@@ -543,17 +543,15 @@ padding: 1px 3px;
 }
 
 .sheet-rolltemplate-spellEffect {
-background-color: #fff;
-padding: 3px;
+    background-color: #fff;
+    padding: 3px;
 }
 
 /* Styling that removes the box around roll buttons
     ============================= */
 button[type=roll].sheet-skill-check-button::before { content: ''; }
 
-button[type=roll].sheet-skill-check-button:hover {
-color: #229999;
-}
+button[type=roll].sheet-skill-check-button:hover { color: #229999; }
 
 button[type=roll].sheet-skill-check-button {
     background-color: transparent;
@@ -632,8 +630,8 @@ button[type=roll].sheet-skill-check-button {
 }
 
 .sheet-npc-sheet-container
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
